syntax = "proto3";

package helloworld;
option java_package = "com.examples.grpcdemo.helloworld";
option java_multiple_files = true;
option go_package = "proto/helloworld;helloworld";

service Greeter {
    // Unary
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    // Server-side streaming RPC
    rpc SayList (HelloRequest) returns (stream HelloReply) {};

    // Client-side streaming
    rpc SayRecord(stream HelloRequest) returns (HelloReply) {};

    // Bidirectional streaming RPC 双向流式 RPC
    rpc SayRoute(stream HelloRequest) returns (stream HelloReply) {};

}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}